// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/buttons/FillUpButton Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 92.3076923076923,
          "width": 565.3846153846154,
        },
        undefined,
      ]
    }
    testID="fill-up-btn-test-id-touchable"
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          Object {
            "elevation": 5,
            "shadowColor": "#333333",
            "shadowOffset": Object {
              "height": 0,
              "width": 7.6923076923076925,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 15.384615384615385,
          },
          Array [
            Object {},
          ],
          Object {
            "backgroundColor": "#C63733",
          },
        ]
      }
      testID="fill-up-btn-test-id"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="fill-up-btn-test-id-container"
      >
        <View
          style={
            Object {
              "borderRadius": 30.76923076923077,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "backgroundColor": "#000000",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "0%",
              }
            }
            testID="fill-up-btn-test-id-animated-bg"
          />
        </View>
        <Text
          adjustsFontSizeToFit={true}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "lineHeight": 28,
                "textAlign": "left",
              },
              Object {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="fill-up-btn-test-id-text"
        >
          Zakoncz
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/buttons/FillUpButton Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 92.3076923076923,
          "width": 565.3846153846154,
        },
        undefined,
      ]
    }
    testID="fill-up-btn-test-id-touchable"
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 30.76923076923077,
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          Object {
            "elevation": 5,
            "shadowColor": "#333333",
            "shadowOffset": Object {
              "height": 0,
              "width": 7.6923076923076925,
            },
            "shadowOpacity": 0.07,
            "shadowRadius": 15.384615384615385,
          },
          Array [
            Object {},
          ],
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
      testID="fill-up-btn-test-id"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 30.76923076923077,
              "flexDirection": "row",
              "height": "100%",
              "justifyContent": "center",
              "width": "100%",
            },
            undefined,
          ]
        }
        testID="fill-up-btn-test-id-container"
      >
        <View
          style={
            Object {
              "borderRadius": 30.76923076923077,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "backgroundColor": "#EFD8D8",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "0%",
              }
            }
            testID="fill-up-btn-test-id-animated-bg"
          />
        </View>
        <Text
          adjustsFontSizeToFit={true}
          style={
            Array [
              Object {
                "color": "#333333",
                "fontFamily": "DIN2014-Demi",
                "fontSize": 18,
                "lineHeight": 28,
                "textAlign": "left",
              },
              Object {
                "color": "#C63733",
              },
            ]
          }
          testID="fill-up-btn-test-id-text"
        >
          Zakoncz
        </Text>
      </View>
    </View>
  </View>
</View>
`;
